# roc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  CPPLINT.cfg  Cargo.toml  Makefile
include/: CMakeLists.txt  arena.h  chunk.h  common.h  compiler.h  dynamic_array.h  global_pool.h  memory.h  object.h  range_search.h  roc_config.h.in  string_pool.h  utils.h  value.h  vm.h
src/: CMakeLists.txt  chunk.cpp  chunk.h  common.h  compiler.cpp  compiler.h  dynamic_array.h  global_pool.cpp  macros.rs  main.cpp  main.rs  memory.cpp  memory.h  object.cpp  roc_config.h.in  scanner.rs  string_pool.cpp  token.rs  utils.cpp  value.cpp  value.h  vm.cpp  vm.h
src/utils/: range_search.h  utils.h
test/: CMakeLists.txt  roc_test.cpp
test/scripts/: features.roc  local_assignment.roc  simple_closure.roc  simple_function.roc  simple_recursion.roc
